Align login form. Fix footer and header. Hardcode login buton placement, shoud figure out right way later.

--- a/workspace/languageLearningAssistant/src/main/webapp/resources/styles/main.css
+++ b/workspace/languageLearningAssistant/src/main/webapp/resources/styles/main.css
@@ -1,27 +1,74 @@
+/*Structure elements*/
+html {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	margin:0; 
-	padding:0; 
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 	background-color:#e8eeef;
 }
 
-.header {
-	background-color:red;
-	background: url(http://www.rakowconstruction.com/wp-content/uploads/2011/09/log-background-feature-header1.jpg);
-	height:150px
+.wrapper {
+	width: 100%;
+	height: 98%;
+	margin: 0;
+	padding: 0;
 }
+
+.header {
+	background: url(http://www.rakowconstruction.com/wp-content/uploads/2011/09/log-background-feature-header1.jpg);
+	height: 150px;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+.main {
+	width: 1000px;
+	margin: auto;
+}
+
+/*Aligning login area*/
 #enter {
 	padding-top:50px;
-	width:25%;
+	width: 40%;
 	margin:auto;
 	
 }
 
-.test{
-	height:150px;
-	background-color:red;
-	margin-top: 100px;
+#userLoginForm {
+	width: 50%;
+	margin: auto;
 }
 
+#userLoginForm input {
+	margin: 5px 0 5px 5px;
+
+}
+
+#userLoginForm input + input + input {
+	margin-right: -5px;
+	float: right;
+}
+
+#userLoginForm a {
+	margin-left: 5px;
+	margin-top: 5px;
+	line-height: 30px;
+}
+
+div#enter h3 {
+	text-align: center;
+}
+
+/*OBV language switch panel*/
 .nativeLanguage {
     width: 99%;
 }
+
